--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -3,23 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
+    <title><% title %></title>
     <link rel="stylesheet" href="/static/style.css">
     <script defer src="/static/script.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Home page</h1>
-    </header>
+    <h1>Home page</h1>
 
     <main>
         <a href="/">Home page</a>
         <a href="/date/">Date page</a>
-
+        <a href="/posts/">Posts page</a>
     </main>
 
-    <footer>
-        <p>This is home page.</p>
-    </footer>
 </body>
 </html>
