--- a/src/templates/user.ejs
+++ b/src/templates/user.ejs
@@ -3,19 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><% title %></title>
+    <title>Document</title>
     <link rel="stylesheet" href="/static/style.css">
     <script defer src="/static/script.js"></script>
 </head>
 <body>
-    <h1>Home page</h1>
-
-    <main>
-        <a href="/">Home page</a>
-        <a href="/date/">Date page</a>
-        <a href="/posts/">Post page</a>
-        <a href="/user/">User page</a>
-    </main>
-
+    <style>
+        h1 {color: blueviolet; font-size: 100%; }
+        body {background-color: blanchedalmond;}
+    </style>
+    <h1>Hello! This is a user page</h1>
 </body>
 </html>
