--- a/src/static/style.css
+++ b/src/static/style.css
@@ -49,3 +49,24 @@ p{
     margin: 10px;
     font-size: 18px;
 }
+
+.post-card {
+    background-color: #ae3131;
+    border: 1px solid #545454;
+    border-radius: 8px;
+    width: 300px;
+    padding: 20px;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+  
+.post-card h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+  
+.post-card p {
+margin: 5px 0;
+}
