--- a/src/templates/post.ejs
+++ b/src/templates/post.ejs
@@ -14,5 +14,14 @@
             <p>Автор: <%= post.author %></p>
             <p>Дата публикации: <%= post.date %></p>
     </div>
+    <h1>POsts list</h1>
+    <% posts.forEach((post) => { %>
+        <h3><%= post.name %></h1>
+            <p><%= post.description %></p>
+            <img src="<%= post.src %>" alt="">
+            <p>Автор: <%= post.author %></p>
+            <p>Дата публикации: <%= post.date %></p>
+   <% }) %>
+   <button id='button' type="button">Create post</button>
 </body>
 </html>
