--- a/src/templates/posts.ejs
+++ b/src/templates/posts.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><% tilte= posts %></title>
     <link rel="stylesheet" href="/static/style.css">
-    <script defer src="/static/script.js"></script>
+    <script defer src="/static/posts.js"></script>
 </head>
 <body>
     <div class="container">
