--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -12,9 +12,9 @@
 
     <main>
         <a href="/">Home page</a>
-        <a href="/date/">Date page</a>
+        <a href="/post/date/">Date page</a>
         <a href="/posts/">Post page</a>
-        <a href="/user/">User page</a>
+        <a href="/post/user/">User page</a>
     </main>
 
 </body>
