--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -13,7 +13,7 @@
     <main>
         <a href="/">Home page</a>
         <a href="/post/date/">Date page</a>
-        <a href="/posts/">Post page</a>
+        <a href="/post/all/">Post page</a>
         <a href="/post/user/">User page</a>
     </main>
 
