add middleware, authorization

--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><% title %></title>
-    <link rel="stylesheet" href="/static/style.css">
-    <script defer src="/static/script.js"></script>
+    <link rel="stylesheet" href="/static/css/style.css">
+    <script defer src="/static/js/script.js"></script>
 </head>
 <body>
     <h1>Home page</h1>
@@ -15,6 +15,8 @@
         <a href="/post/date/">Date page</a>
         <a href="/post/all/">Post page</a>
         <a href="/post/user/">User page</a>
+        <a href="/login">Login</a>
+        <a href="/registration">Registration</a>
     </main>
 
 </body>
