--- a/src/templates/posts.ejs
+++ b/src/templates/posts.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><% tilte= posts %></title>
-    <link rel="stylesheet" href="/static/style.css">
-    <script defer src="/static/posts.js"></script>
+    <link rel="stylesheet" href="/static/css/style.css">
+    <script defer src="/static/js/posts.js"></script>
 </head>
 <body>
     <div class="container">
