--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><% title %></title>
     <link rel="stylesheet" href="/static/css/style.css">
     <script defer src="/static/js/script.js"></script>
 </head>
@@ -12,9 +11,9 @@
 
     <main>
         <a href="/">Home page</a>
-        <a href="/post/date/">Date page</a>
+        <a href="/date">Date page</a>
         <a href="/post/all/">Post page</a>
-        <a href="/post/user/">User page</a>
+        <a href="/user">User page</a>
         <a href="/login">Login</a>
         <a href="/registration">Registration</a>
     </main>
