--- a/src/templates/posts.ejs
+++ b/src/templates/posts.ejs
@@ -11,20 +11,10 @@
         <div class="post">
             <h1>POST 1</h1>
             <% posts.forEach((post) => { %>
-                <h2><%= post.name1 %></h2>
-                <p><%= post.author1 %></p>
+                <h2><%= post.name %></h2>
+                <p><%= post.author %></p>
             <% }) %>
         </div>
-    </div>
-
-    <div class="container">
-        <div class="post">
-            <h1>POST 2</h1>
-            <% posts.forEach((post) => { %>
-                <h2><%= post.name2 %></h2>
-                <p><%= post.author2 %></p>
-            <% }) %>
-        </div>  
     </div>
 </body>
 </html>
